--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ API_HASH=your_api_hash
 BOT_TOKEN=your_bot_token
 BOT_USERNAME=your_bot_username
 OWNER_ID=1234567890
+WEB_APP=False #Set this True if deploying in Render or Koyeb 
